[package]
name = "nats-gatekeeper"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["foxford.ru developers", "Shamir Khodzha <khodzha.sh@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.5", features = ["headers"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
futures = "0.3.19"
http = "0.2.5"
humantime-serde = "1"
hyper = "0.14.20"
nats-jwt = "0.2.0"
once_cell = "1"
prometheus = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
svc-authn = { version = "0.7", features = ["jose"] }
svc-authz = "0.11"
svc-error = { version = "0.3", features = ["svc-authn", "svc-authz", "sentry-extension"] }
svc-utils = { version = "0.4", features = ["authn-extractor", "cors-middleware", "log-middleware", "metrics-middleware"] }
tokio = { version = "1.16", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-attributes  = "0.1"
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
